Fix viewport height to always keep footer out of view

--- a/my-website/src/App.module.css
+++ b/my-website/src/App.module.css
@@ -1,12 +1,19 @@
 html,
-body {
+body,
+#root {
   height: 100%;
   margin: 0;
+}
+body {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .appContainer {
   min-height: 100vh; /* Set minimum height of app container to 100% of viewport height */
   background-color: #020302;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
