--- a/my-website/src/assets/styles/Footer.module.css
+++ b/my-website/src/assets/styles/Footer.module.css
@@ -1,3 +1,4 @@
+/* Footer.module.css */
 .footer {
   background-color: black;
   color: white;
@@ -6,6 +7,7 @@
   text-align: center;
   width: 100%;
   position: relative;
+  margin-top: auto; /* Ensure footer stays at the bottom */
 }
 
 .row {
